k8s/auth-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\tools\terraform\kompose.exe convert -f ..\docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-backend
  name: auth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\tools\terraform\kompose.exe convert -f ..\docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/appreservas-appreservas: "true"
        io.kompose.service: auth-backend
    spec:
      containers:
        - env:
            - name: LOGSTASH_URL
              value: logstash:5000
            - name: RABBIT_MQ_IP
              value: rabbitmq
          image: auth-backend
          name: auth-backend
          ports:
            - containerPort: 8085
          resources: {}
      restartPolicy: Always
status: {}
