k8s/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\tools\terraform\kompose.exe convert -f ..\docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  ports:
    - name: "5044"
      port: 5044
      targetPort: 5044
    - name: "5000"
      port: 5000
      targetPort: 5000
    - name: 5000-udp
      port: 5000
      protocol: UDP
      targetPort: 5000
    - name: "9600"
      port: 9600
      targetPort: 9600
  selector:
    io.kompose.service: logstash
status:
  loadBalancer: {}
