k8s/reservas-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\tools\terraform\kompose.exe convert -f ..\docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: reservas-backend
  name: reservas-backend
spec:
  ports:
    - name: "8095"
      port: 8095
      targetPort: 8095
  selector:
    io.kompose.service: reservas-backend
status:
  loadBalancer: {}
