k8s/appreservas-appreservas-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: appreservas-appreservas
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/appreservas-appreservas: "true"
  podSelector:
    matchLabels:
      io.kompose.network/appreservas-appreservas: "true"
